--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,8 +1,18 @@
 name: GitSync
 main: me.vrganj.gitsync.GitSync
-version: 1.0
+version: 1.1
 api-version: 1.18
 
 commands:
   gitsync:
     description: Sync the Git repository.
+
+permissions:
+  gitsync.*:
+    children:
+      gitsync.sync:
+        default: op
+        description: Allows for syncing the repository.
+      gitsync.reload:
+        default: op
+        description: Allows for reloading the configuration.
